# mcp-atomictoolkit

./: .coveragerc  Dockerfile  README.md  hf_server.py  main.py  pyproject.toml  render.yaml
.github/workflows/: tests.yml
docs/: async-worker-paradigm.md  mcp-design-review.md
src/mcp_atomictoolkit/: artifact_store.py  calculators.py  http_app.py  mcp_server.py  md_runner.py  optimizers.py  structure_operations.py  task_support.py
src/mcp_atomictoolkit/analysis/: __init__.py  autocorrelation.py  structure.py  trajectory.py
src/mcp_atomictoolkit/workflows/: __init__.py  core.py
tests/: conftest.py  test_analysis_autocorrelation.py  test_analysis_structure.py  test_analysis_trajectory.py  test_artifact_store.py  test_calculators_factory.py  test_calculators_kim.py  test_http_app_utils.py  test_io_handlers.py  test_io_handlers_branches.py  test_kim_integration.py  test_mcp_server.py  test_mcp_server_utils.py  test_optimizers_cpu_jax.py  test_structure_operations.py  test_task_support.py
